# ht-logistic-workspace

./: .gitignore  CODEX_SUMMARY.md  README.md  deploy.ps1  dev.ps1
backend/: main.py  pi_bridge.py  requirements.txt
backend/tools/: __init__.py
frontend/: app.js  index.html  styles.css
pi-agent-config/: SYSTEM.md
pi-agent-config/skills/: assistant.md  automation.md
pi-extensions/: EXTENSION_INSTALL.md  all-in-one.ts  install.ps1
python-sidecar/: ht-sidecar.spec  main.py  setup.ps1
python-sidecar/tools/: chicun.py  extract_customs.py
scripts/: build-and-release.ps1  build-installer.ps1  build-installer.sh  install-python.ps1
tauri-app/: package-lock.json  package.json  vite.config.ts
tauri-app/src/: App.tsx  ExtensionManager.tsx  FileBrowser.tsx  ToolsPanel.tsx  styles.css  utils.ts
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/src/: main.rs
